# PMSM-parameter-online-identifcation

./: CMakeLists.txt  EKF.c  MARS.c  README.md  RLS.c  main.c  matrix.c  matrix.h  pmsm.c  pmsm.h  showLdLq.m  xk6.txt  xk6.txt_EKF.txt  xk6.txt_MARS.txt  xk6.txt_RLS.txt
